samples/_failures_safe/1761044283_b7a8c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b53d3c79.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_b53d3c79.c:144:5: error: expected identifier or ‘(’ at end of input
  144 |     char
      |     ^~~~
./samples/SAFE/__tmp_b53d3c79.c:144:5: error: expected declaration or statement at end of input
